feat: hosting scripts
