# src/handlers/health.go
@@ -5,6 +5,12 @@ import (
 	"net/http"
 )
 
+// @Summary      Health
+// @Description  Check if the service is active
+// @Tags         Miscellaneous
+// @Produce      json
+// @Success      200
+// @Router       /health [get]
 func HealthHandler(context *gin.Context) {
 	context.Status(http.StatusOK)
 }
